Fix text contrast and naming links

--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ hr {
   font-weight: 500;
   font-size: 21px;
   background-color: #fff;
-  color: #6070ff;
+  color: #000;
   border-radius: 8px;
   display: flex;
 }
